[package]
name = "serlp"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = "A serde serializer and deserializer for RLP (Recursive Length Prefix) encoding."
repository = "https://github.com/M4tsuri/serlp"
readme = "README.md"
keywords = ["eth", "RLP", "serde", "serialize"]
categories = ["encoding"]
authors = ["M4tsuri <me@m4tsuri.com>"]
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ['derive'] }
paste = "1.0"
byteorder = "1.4.3"

[dev-dependencies]
serde_bytes = "0.11"
